# Project-Fauna

./: .gitignore  Makefile  README.md  animals_etl_simple.py  pyproject.toml  requirements.txt
scripts/: animals_etl.py
src/: http_client.py
src/animals_etl/: __init__.py  api.py  cli.py  config.py  http_client.py  models.py  pipeline.py  utils.py
tests/: test_http_client.py  test_pipeline.py  test_util.py
