[project]
name = "project-fauna"
version = "0.1.0"
description = "Project Fauna"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
]
authors = [{ name = "Meghna Holla" }]

[project.scripts]
animals-etl = "animals_etl.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["animals_etl*"]